Fixed White space in the backdrop

--- a/Iteration 2 UI v2/css/companySearch.css
+++ b/Iteration 2 UI v2/css/companySearch.css
@@ -15,3 +15,15 @@ body .modal-open {
 
 
 }
+
+
+body .modal-backdrop{
+ overflow: hidden;
+ position:fixed;
+    width: 100%;
+    height: 100%;
+
+
+
+
+}
