--- a/Iteration 2 UI v2/css/errormessage.css
+++ b/Iteration 2 UI v2/css/errormessage.css
@@ -8,7 +8,7 @@
   }
 
  .error_container{
-  display: none;
+  display: inline;
  }	
 
  
